Integrate ASP.NET Core Identity

--- a/src/PetProject.API/PetProject.API.csproj
+++ b/src/PetProject.API/PetProject.API.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PetProject.Core\PetProject.Core.csproj" />
+    <ProjectReference Include="..\PetProject.Data\PetProject.Data.csproj" />
+  </ItemGroup>
+
 </Project>
