--- a/src/PetProject.Data/appsettings.json
+++ b/src/PetProject.Data/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=PetProject;User Id=sa;Password=Admin@123$;TrustServerCertificate=true"
   }
